--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body {
   margin: 0 auto;
 }
 
+body[dir="rtl"], html[dir="rtl"] body {
+  direction: rtl;
+}
+
 /* === Typography === */
 h1,
 h2,
