Update blog and post templates: enhance date formatting, localize titles, and improve image handling

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -14,7 +14,7 @@
     <div class="nav-links">
       <a href="/blog.html">בלוג</a>
       <div class="search-container">
-        <input type="search" id="search-input" placeholder="חיפוש בבלוג..." autocomplete="off">
+        <input type="search" id="search-input" placeholder="חיפוש..." autocomplete="off">
         <div id="search-results" class="search-results hidden"></div>
       </div>
     </div>
