--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,6 +37,7 @@ body {
         opacity: 0;
         transform: translateY(4px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0);
@@ -153,6 +154,7 @@ main {
         opacity: 0;
         transform: translateY(8px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0);
@@ -468,4 +470,12 @@ mark {
     color: inherit;
     padding: 0 2px;
     border-radius: 2px;
+}
+
+img {
+    max-width: 100%;
+}
+
+article img {
+    margin-bottom: 2rem;
 }
