refactor: comment out blog link in navigation

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -12,7 +12,7 @@
   <nav>
     <a href="/" class="logo">ישוע בלוג</a>
     <div class="nav-links">
-      <a href="/blog.html">בלוג</a>
+      <!-- <a href="/blog.html">בלוג</a> -->
       <div class="search-container">
         <input type="search" id="search-input" placeholder="חיפוש..." autocomplete="off">
         <div id="search-results" class="search-results hidden"></div>
