--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,7 @@
 /* Components */
 @import './components/navigation.css';
 @import './components/hero.css';
+@import './components/blog.css';
 @import './components/post-list.css';
 @import './components/article.css';
 @import './components/search.css';
