--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,7 @@
 @import './components/blog.css';
 @import './components/post-list.css';
 @import './components/related-posts.css';
+@import './components/go-deeper.css';
 @import './components/article.css';
 @import './components/search.css';
 @import './components/footer.css';
