--- a/src/partials/go-deeper.html
+++ b/src/partials/go-deeper.html
@@ -3,7 +3,7 @@
     <div class="cta-grid">
         <div class="cta-item">
             <p>לקרוא את הברית החדשה באינטרנט</p>
-            <a href="https://www.biblegateway.com/versions/Hebrew-Names-Version-HNV-Bible/" target="_blank" rel="noopener" class="cta-btn primary">לקריאת הכתובים</a>
+            <a href="https://bible.new/read/" target="_blank" rel="noopener" class="cta-btn primary">לקריאת הכתובים</a>
         </div>
         <div class="cta-item">
             <p>לגלות תוכן מעמיק נוסף</p>
