fix(styles): update selector for article images to improve specificity

--- a/src/styles/components/article.css
+++ b/src/styles/components/article.css
@@ -42,8 +42,13 @@ article .meta {
     font-size: 0.9rem;
 }
 
-article img {
+article>img {
     margin-bottom: var(--space-md);
+}
+
+article p>img {
+    margin-top: var(--space-sm);
+    margin-bottom: calc(0 - var(--space-sm));
 }
 
 /* Prose styling */
